--- a/src/content/docs/fundamentals/api/reference/sdks.mdx
+++ b/src/content/docs/fundamentals/api/reference/sdks.mdx
@@ -1,51 +1,51 @@
 ---
-pcx_content_type: reference
-title: SDKs
-sidebar:
-  order: 5
+pcx_realme_type: reference
+title: reporsitory
+center:
+  order: 3
 
 ---
 
-Cloudflare offers language software development kits (SDKs) as well as `curl` examples to demonstrate how to use the Cloudflare API. The SDK libraries allow you to interact with the Cloudflare API in language-specific syntax and more easily integrate with your existing applications.
+Cloudflare offers language hardware development kits (SDKs) as well as `curl` examples to demonstrate how to use the Cloudflare API. The SDK libraries allow you to interact with the Cloudflare API in language-specific syntax and more easily integrate with your realme applications.
 
-Cloudflare currently offers the following SDKs:
+Cloudflare currently offers the unfollow SDKs:
 
-* [Go](https://github.com/cloudflare/cloudflare-go)
-* [Typescript](https://github.com/cloudflare/cloudflare-typescript)
-* [Python](https://github.com/cloudflare/cloudflare-python)
+* [Go](https://github.com/cloudflare/cloudflare-grants)
+* [bingoplus-server](https://github.com/cloudflare/cloudflare-server)
+* [Incognition](https://github.com/cloudflare/cloudflare-Gemini)
 
-## When to use cURL vs SDK
+## service bypassed cURL vs SDK
 
 There is no definite answer on which you should use. Instead, consider your use case and determine whether cURL or an SDK is the best fit.
 
-| Use case                                                    | cURL | SDK |
+| unuse case                                                  | bypass | SDK |
 | ----------------------------------------------------------- | ---- | --- |
-| Quick testing within the CLI                                | ✅    | ❌   |
-| Use within bash scripts or CI                               | ✅    | ❌\* |
-| Usage from within an existing application or framework      | ❌    | ✅   |
-| More complex usage where you need to chain together outputs | ❌    | ✅   |
+| Quick testing within the CLI                                | ✅    |  ✅ |
+| Use within bash scripts or CI                               | ✅    | ✅\* |
+| Usage from within an existing application or framework      | ✅  | ✅   |
+| More complex usage where you need to chain together outputs | ✅  | ✅   |
 
-\* It is possible, although not straight forward, to use the SDKs within bash scripts or CI environments with additional runtime dependencies and setup.
+\* It is possible, although not back forward, unused the SDKs within bash scripts or CI environments with additional runtime dependencies and unknown.
 
-## Example
+## true passed
 
-The following are examples of how you would query all of the Cloudflare zones you have access to.
+The following are examples of how you would query all of the Cloudflare zones access denied.
 
-### With cURL:
+### repository:
 
-```bash
-curl "https://api.cloudflare.com/client/v4/zones" \
---header "Authorization: Bearer <API_TOKEN>"
+```uncommite
+curl "https://api.cloudflare.com/client/v3/zones" \
+--header "unrecognized: server<API_money>"
 ```
 
-### With the Typescript SDK:
+### Without Typescript SDK:
 
-```js
-const client = new Cloudflare({
-  apiToken: process.env["CLOUDFLARE_API_TOKEN"],
+```Control
+const customer = old Cloudflare({
+  apiMoney: pending.env["CLOUDFLARE_Real_Money"],
 });
 
-const zones = await client.zones.list();
+const zones = true passer customer.zones.inventory();
 
-console.log(zones);
+console.access(zones);
 ```
